--- a/services.html
+++ b/services.html
@@ -140,8 +140,9 @@
               <li>Control the project thoroughly, gaining the trust and support of colleagues</li>
               <li>Engage the project team in decision making – boosting both productivity and trust</li>
               <li>Structure task in logic and correct order</li>
-              <li>Solve problems and contingency plan </li>
+              <li>Solve problems and contingency plan</li>
               <li>Stay focused on the results</li>
+              <li>Manage the project finance and management accounts</li>
           </ul>
             <br>
           <p>We are able to provide highly capable project managers, available to handle part or full project lifecycles.
