--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <footer role="contentinfo">
     <div class="content-wrap">
       <a href="#top" class="btn"><i class="fas fa-chevron-circle-up"></i></a>
-      <p class="credit">Copyright &copy; 2021 SBC
-      <p>Website created by SBC</p>
+      <p class="credit">Copyright &copy; 2024 SBC
+      <p>Website created by Ali Tahir</p>
       <hr>
     </div><!-- End of class="content-wrap" -->
   </footer>
