--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
   <footer role="contentinfo">
     <div class="content-wrap">
       <a href="#top" class="btn"><i class="fas fa-chevron-circle-up"></i></a>
-      <p class="credit">Copyright &copy; 2024 SBC
-      <p>Website created by Ali Tahir</p>
+      <p class="credit">Copyright &copy; 2025 SBC
+      <p>Website created by 
+        <a href="https://alitahir.co.uk" target="_blank" class="creator-link">Ali Tahir</a>
+      </p>
+
       <hr>
     </div><!-- End of class="content-wrap" -->
   </footer>
@@ -85,3 +88,4 @@
 </body>
 
 </html>
+
