--- a/services.html
+++ b/services.html
@@ -175,8 +175,10 @@
   <footer role="contentinfo">
     <div class="content-wrap">
       <a href="#top" class="btn"><i class="fas fa-chevron-circle-up"></i></a>
-      <p class="credit">Copyright &copy; 2021 SBC
-      <p>Website created by SBC</p>
+      <p class="credit">Copyright &copy; 2025 SBC
+      <p>Website created by 
+        <a href="https://alitahir.co.uk" target="_blank" class="creator-link">Ali Tahir</a>
+      </p>
       <hr>
     </div><!-- End of class="content-wrap" -->
   </footer>
@@ -196,3 +198,4 @@
 </body>
 
 </html>
+
