--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
 
     <!-- Replace YOUR_API_KEY_HERE with your actual restricted API key -->
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPA0o-Mgjtw9TbbEZrJn_oBsnoBKWoYDk&callback=initMap">
     </script>
 
   </main>
@@ -161,3 +161,4 @@
 
 </body>
 </html>
+
